syntax="proto3";

package auth;

option go_package="github.com/asmile1559/dyshop/pb/backend/auth;auth";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
}

message DeliverTokenReq {
  int64  user_id= 1;
}

message VerifyTokenReq {
  string token = 1;
  string method = 2;
  string uri = 3;
}

message DeliveryResp {
  string token = 1;
}

message VerifyResp {
  bool res = 1;
  int64 user_id = 2;
  int32 code = 3;
}
